[package]
name = "solana-client"
description = "Solana Client"
documentation = "https://docs.rs/solana-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
solana-connection-cache = "=1.18.23"
solana-measure = "=1.18.23"
solana-metrics = "=1.18.23"
solana-pubsub-client = "=1.18.23"
solana-quic-client = "=1.18.23"
solana-rpc-client = { version = "=1.18.23", features = ["default"] }
solana-rpc-client-api = "=1.18.23"
solana-rpc-client-nonce-utils = "=1.18.23"
solana-sdk = "=1.18.23"
solana-streamer = "=1.18.23"
solana-thin-client = "=1.18.23"
solana-tpu-client = {version = "=1.18.23", features = ["default"] }
solana-udp-client = "=1.18.23"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
